<resources>
    <string name="app_name">CoffeeTime</string>

    <string name="coffeeText">coffeeText</string>
    <string name="coffee">coffee</string>

    <string name="quantityText">Quantity</string>
    <string name="quantity">1</string>
    <string name="plus">+</string>
    <string name="minus">-</string>

    <string name="summary">Order Summary</string>
    <string name="priceText">Price</string>
    <string name="price">₹30</string>

    <string name="whip_cream">Whipped Cream</string>
    <string name="toppings">Toppings</string>
    <string name="chocolate">Chocolate</string>
    <string name="name">Name</string>
    <string name="confirm">Confirm</string>

</resources>
